<resources>
    <string name="app_name">AmatiApp PIC</string>
    <string name="app_logo_desc">AMATI Logo</string>


    <!--
    Register Activity
    -->
    <string name="register_email_hint">Alamat Email</string>
    <string name="register_pass_hint">Kata Sandi</string>
    <string name="register_repass_hint">Konfirmasi Kata Sandi</string>
    <string name="register_village_name_hint">Nama Desa</string>
    <string name="register_phone_number_hint">Nomor Telepon</string>
    <string name="register_email_auto_fill_hint">email</string>
    <string name="register_pass_auto_fill_hint">password</string>
    <string name="register_village_name_auto_fill_hint">village name</string>
    <string name="register_phone_number_auto_fill_hint">phone number</string>
    <string name="register_button">Register</string>
    <string name="register_success">Pendaftaran Berhasil</string>
    <string name="register_login_desc">Sudah memiliki akun?</string>
    <string name="register_login_button">Masuk</string>
    <string name="register_village_name_required">Masukkan Nama Desa Anda</string>
    <string name="register_village_phone_number_required">Masukkan Nomor Telepon Anda</string>

    <!--Login Activity-->
    <string name="login_button">Login</string>
    <string name="desc_signup">Belum memiliki akun? </string>
    <string name="or_sign_up">Daftar sekarang!</string>
    <string name="email_required">Masukkan email Anda</string>
    <string name="password_required">Masukkan kata sandi Anda</string>
    <string name="password_min">Kata sandi harus memiliki 6 karakter</string>
    <string name="repassword_required">Kata sandi yang anda masukkan berbeda.</string>
    <string name="password_not_match">Kata sandi yang anda masukkan berbeda.</string>
    <string name="login_success">Berhasil Masuk. Hallo, </string>
    <string name="go_login">Silahkan Login Terlebih Dahulu</string>
    <string name="login_failed">Gagal Masuk</string>
    <string name="unauthorized">Email atau password mungkin salah</string>
    <string name="unauthorized2">Tidak memiliki akses, silahkan login/logout terlebih dahulu</string>
    <string name="invalid_email">Format email tidak sesuai</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="server_error">Server Error</string>
    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec dictum augue, sit amet elementum eros. Phasellus varius turpis id.</string>
    <string name="profil">Profile</string>
    <string name="logout_button">Logout</string>

    <!--Profile-->
    <string name="logout">Keluar</string>
    <string name="alert_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="editProfile_button">Edit Profile</string>
    <string name="nama_desa">Nama Desa</string>
    <string name="lokasi_desa">Lokasi Desa</string>
    <string name="masukkan_lokasi_desa">Masukkan lokasi desa...</string>
    <string name="masukkan_nama_desa">Masukkan nama desa...</string>

    <!--Detail Activity-->
    <string name="detail_title">Judul Problem</string>
    <string name="detail_location">Lokasi Problem</string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in mollis massa. Ut in lacus lacinia, egestas urna a, tincidunt ipsum. Integer pulvinar velit sit amet libero sodales commodo nec eu massa.</string>
    <string name="detail_req">Requirements</string>
    <string name="detail_module">Modul X</string>
    <string name="masukkan_nomor_telepon">Masukkan nomor telepon...</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="edit_success">Edit Berhasil</string>

    <!--Add Problem-->
    <string name="title">Judul Masalah</string>
    <string name="desc_general">Deskripsi Umum</string>
    <string name="button_problem">Ajukan Problem</string>
    <string name="tittle_req">Masukkan Judul Masalah</string>
    <string name="desc_req">Masukkan Deskripsi Masalah</string>
    <string name="masalah">Tidak ada masalah yang dapat ditampilkan.\nAnda dapat menambahkan masalah dengan menekan tombol tambah pada pojok kanan bawah layar.</string>
    <string name="tampil_problem">Data berhasil ditampilkan</string>
    <string name="Problem_ga_ada">Belum menambahkan masalah, tidak ada masalah yang bisa ditampilkan</string>
    <string name="hi">Halo,</string>
</resources>