<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_register_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amati_logo" />

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/register_email_auto_fill_hint"
        android:background="@drawable/input_background"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_icon" />

    <EditText
        android:id="@+id/ed_register_village_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/register_village_name_auto_fill_hint"
        android:background="@drawable/input_background"
        android:hint="@string/register_village_name_hint"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <EditText
        android:id="@+id/ed_register_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/register_phone_number_auto_fill_hint"
        android:background="@drawable/input_background"
        android:hint="@string/register_phone_number_hint"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_village_name" />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/register_pass_auto_fill_hint"
        android:background="@drawable/input_background"
        android:hint="@string/register_pass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_phone_number" />

    <EditText
        android:id="@+id/ed_register_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/register_pass_auto_fill_hint"
        android:background="@drawable/input_background"
        android:hint="@string/register_repass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_repassword" />

    <TextView
        android:id="@+id/tv_register_login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:text="@string/register_login_desc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/btn_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_login_button"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_register_login_desc"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>