<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/amati_logo"
            android:contentDescription="@string/app_logo_desc" />

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon"
            android:autofillHints="@string/register_email_auto_fill_hint" />

        <EditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:hint="@string/register_pass_hint"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
            android:autofillHints="@string/register_pass_auto_fill_hint" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/desc_signup"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/ed_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/or_sign_up"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>